# openspace-svn

./: svn-commit.tmp
branches/mloskot-style-refactoring/: configure  configure.ac  openspacerc.in  svnignore
branches/mloskot-style-refactoring/icons/: Makefile.in
branches/mloskot-style-refactoring/icons/default/: Makefile.in
branches/mloskot-style-refactoring/src/: CommandsFileTypesContainers.h  Makefile  Makefile.am  Makefile.in  MimeType.h  OSCMDDialogBox.cpp  OSCMDDialogBox.h  OSCommandTypeInfo.cpp  OSConfigure.cpp  OSConfigure.h  OSFile.h  OSFileList.cpp  OSFileList.h  OSFileListItem.cpp  OSFileListItem.h  OSFileTypeInfo.cpp  OSFileTypeInfo.h  OSFileTypeSymbol.cpp  OSFileTypeSymbol.h  OSFirstRunDialogBox.cpp  OSFirstRunDialogBox.h  OSInfoPanel.cpp  OSInfoPanel.h  OSMainWindow.cpp  OSMainWindow.h  OSMimeApp.cpp  OSMimeApp.h  OSMimeType.cpp  OSMimeType.h  OSObjectManager.h  OSPathType.cpp  OSPathType.h  OSPreferences.cpp  OSPreferences.h  OSShutter.cpp  OSShutter.h  OSThreadExec.cpp  OSThreadExec.h  OSUtils.cpp  OSVirtualFileSystemBase.h  (+7 more)
branches/mloskot-style-refactoring/src/plugins/cmddialog/: Makefile.am  Makefile.in  OSClone.cpp  OSEditSymlink.cpp  OSMd5sum.cpp  OSRename.cpp  OSSymlink.cpp  access.cpp  clone.cpp  compress.cpp  editsymlink.cpp  md5sum.cpp  mkdir.cpp  rename.cpp  symlink.cpp
branches/mloskot-style-refactoring/src/plugins/filelist/: Makefile.am  Makefile.in  OSVfsArchive.cpp  OSVfsArchive.h  OSVfsFtp.cpp  OSVfsFtp.h  OSVfsLocal.cpp  filelist_archive.cpp  filelist_archive.h  filelist_ftp.cpp  filelist_ftp.h  filelist_local.h  filelist_scp.cpp  filelist_scp.h  filelist_search.cpp  filelist_search.h  filelist_sftp.h  pftp.cpp
branches/mloskot-style-refactoring/templates/: cpp  h
tags/openspace-0.1.0/: AUTHORS  ChangeLog  configure.ac  openspacerc.in
tags/openspace-0.1.0/icons/default/: Makefile.am
tags/openspace-0.1.0/src/: FirstRun.h  MimeApp.cpp  MimeApp.h  filelist.cpp  filelist_base.h  filetype.h  informationpanel.cpp  sharedFunctions.cpp  sharedobjects.cpp  sharedobjects.h  thread_elem.h
tags/openspace-0.1.0/src/plugins/: Makefile.am
tags/openspace-0.1.0/src/plugins/filelist/: filelist_ftp.cpp  filelist_ftp.h  filelist_sftp.cpp
tags/openspace-0.1.1/: README  aclocal.m4  configure  openspacerc.in
tags/openspace-0.1.1/src/: FirstRun.cpp  MimeType.cpp  config.h.in  configure.h  filelist.cpp  filelist.h  mainwindow.cpp  mainwindow.h  osfile.h  pathtype.cpp  preferences.cpp  preferences.h  sharedobjects.cpp  shutter.h
tags/openspace-0.1.1/src/plugins/cmddialog/: access.cpp  clone.cpp  mkdir.cpp  rename.cpp
tags/openspace-0.1.1/src/plugins/filelist/: Makefile.am  filelist_local.cpp
trunk/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  doxygen.conf  libtool  mimeapp  nao.conf.in  openspacerc  openspacerc.in  svnignore
trunk/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
trunk/icons/: Makefile  Makefile.am  Makefile.in
trunk/icons/big/: Makefile.am  Makefile.in
trunk/icons/default/: Makefile.am  Makefile.in
trunk/icons/mini/: Makefile.am  Makefile.in
trunk/src/: CommandsFileTypesContainers.cpp  CommandsFileTypesContainers.h  FirstRun.cpp  Makefile  Makefile.am  Makefile.in  MimeApp.cpp  MimeApp.h  MimeType.cpp  MimeType.h  OSCMDDialogBox.cpp  OSCMDDialogBox.h  OSCommandTypeInfo.cpp  OSCommandTypeInfo.h  OSConfigure.cpp  OSConfigure.h  OSFile.h  OSFileList.cpp  OSFileList.h  OSFileListController.h  OSFileListItem.cpp  OSFileListItem.h  OSFileTypeInfo.cpp  OSFileTypeInfo.h  OSFileTypeSymbol.cpp  OSFileTypeSymbol.h  OSFirstRunDialogBox.cpp  OSFirstRunDialogBox.h  OSFrame.cpp  OSFrame.h  OSInfoPanel.cpp  OSInfoPanel.h  OSMainWindow.cpp  OSMainWindow.h  OSMimeApp.cpp  OSMimeApp.h  OSMimeType.cpp  OSMimeType.h  OSObjectManager.cpp  OSObjectManager.h  (+44 more)
trunk/src/.deps/: cmddialog.Po  configure.Po  filelist.Po  filetype.Po  informationpanel.Po  mainwindow.Po  openspace.Po  oslistitem.Po  pathtype.Po  preferences.Po  shutter.Po  thread_elem.Po
trunk/src/plugins/: Makefile  Makefile.in
trunk/src/plugins/cmddialog/: Makefile  Makefile.am  Makefile.in  OSAccess.cpp  OSClone.cpp  OSCompress.cpp  OSEditSymlink.cpp  OSMd5sum.cpp  OSMkdir.cpp  OSRename.cpp  OSSymlink.cpp  access.cpp  clone.cpp  compress.cpp  editsymlink.cpp  mkdir.cpp  rename.cpp  symlink.cpp
trunk/src/plugins/cmddialog/.deps/: access.Plo  cmddialog.Plo  configure.Plo  mkdir.Plo  rename.Plo  thread_elem.Plo
trunk/src/plugins/filelist/: Makefile  Makefile.am  Makefile.in  OSFXFile.cpp  OSFXFile.h  OSVfsArchive.cpp  OSVfsArchive.h  OSVfsFtp.cpp  OSVfsFtp.h  OSVfsLocal.cpp  OSVfsLocal.h  OSVfsSearch.cpp  OSVfsSearch.h  OSVfsSftp.cpp  OSVfsSftp.h  create_new_plugin.sh  filelist_archive.cpp  filelist_archive.h  filelist_ftp.cpp  filelist_ftp.h  filelist_local.cpp  filelist_local.h  filelist_scp.cpp  filelist_scp.h  filelist_search.cpp  filelist_search.h  filelist_sftp.cpp  filelist_sftp.h  filelist_tar.cpp  filelist_tar.h  pftp.cpp  pftp.h
trunk/src/plugins/filelist/.deps/: OSFXFile.Plo  configure.Plo  filelist_local.Plo  thread_elem.Plo
trunk/templates/: cpp  h
