iconsdir=$(datadir)/openspace/icons

icons_DATA=big_directory.gif \
	bigicons.gif \
	big_unknown.gif \
	calc.gif \
	close.gif \
	compressed.gif \
	configure.gif \
	details.bmp \
	details.gif \
	directory.gif \
	doc.gif \
	executable.gif \
	execute.gif \
	foxbig.gif \
	foxmini.gif \
	image.gif \
	left.gif \
	library.gif \
	movie.gif \
	music.gif \
	network.gif \
	password.gif \
	pattern.gif \
	plus.gif \
	right.gif \
	script.gif \
	smallicons.bmp \
	smallicons.gif \
	symlink.gif \
	txt.gif \
	unknown.gif \
	user.gif \
	word.gif \
	max.gif \
	min.gif
	 
